# SysLab3

./: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task3.h
